LightningDev/force-app/main/default/objects/Student__c/fields/Admission__c.field-meta.xml
<CustomField>
    <fullName>Admission__c</fullName>
    <label>Admission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B-tech,</fullName>
            </value>
            <value>
                <fullName>BA,</fullName>
            </value>
            <value>
                <fullName>B-com,</fullName>
            </value>
            <value>
                <fullName>Degree,</fullName>
            </value>
            <value>
                <fullName>Inter,</fullName>
            </value>
            <value>
                <fullName>Polytechnic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>