LightningDev/force-app/main/default/objects/Student__c/fields/JoiningDate__c.field-meta.xml
<CustomField>
    <fullName>JoiningDate__c</fullName>
    <label>JoiningDate</label>
    <type>Date</type>
</CustomField>