LightningDev/force-app/main/default/objects/Student__c/fields/RollNumber__c.field-meta.xml
<CustomField>
    <fullName>RollNumber__c</fullName>
    <displayFormat>STD-{0000}</displayFormat>
    <label>RollNumber</label>
    <type>AutoNumber</type>
</CustomField>